--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-screens": "^3.10.1",
     "react-native-spinkit": "^1.5.1",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-star-rating-widget": "^1.2.0",
     "react-native-svg": "^12.1.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.0.0",
