--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-gesture-handler": "^2.1.0",
+    "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-image-crop-picker": "^0.37.2",
     "react-native-pager-view": "^5.4.9",
     "react-native-safe-area-context": "^3.3.2",
