--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "native-base": "^3.2.2",
     "react": "17.0.2",
     "react-native": "0.66.4",
+    "react-native-geolocation-service": "^5.3.0-beta.4",
     "react-native-gesture-handler": "^2.1.0",
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-image-crop-picker": "^0.37.2",
@@ -33,6 +34,7 @@
     "react-native-svg": "^12.1.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.0.0",
+    "react-native-webview": "^11.17.2",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
