--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "native-base": "^3.2.2",
     "react": "17.0.2",
     "react-native": "0.66.4",
+    "react-native-create-thumbnail": "^1.5.1",
     "react-native-geolocation-service": "^5.3.0-beta.4",
     "react-native-gesture-handler": "^2.1.0",
     "react-native-google-places-autocomplete": "^2.4.1",
@@ -41,6 +42,7 @@
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "rn-fetch-blob": "^0.12.0",
     "rn-range-slider": "^2.1.1"
   },
   "devDependencies": {
